--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
+    "axios": "^0.19.0",
     "bloomer": "^0.6.5",
     "bootstrap": "^4.4.1",
     "bulma": "^0.8.0",
