--- a/package.json
+++ b/package.json
@@ -5,17 +5,27 @@
   "dependencies": {
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
+    "aphrodite": "^2.4.0",
     "axios": "^0.19.0",
     "bloomer": "^0.6.5",
     "bootstrap": "^4.4.1",
     "bulma": "^0.8.0",
     "chart.js": "^2.9.3",
+    "fusioncharts": "^3.15.0-sr.1",
+    "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
+    "react-fontawesome": "^1.7.1",
+    "react-fusioncharts": "^3.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.3.0",
+    "react-sparklines": "^1.7.0",
+    "react-svg-line-chart": "^2.0.2",
+    "simple-flexbox": "^2.3.0",
+    "youtube-api-search": "0.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
